fixed markup, added col

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <ul id="books">
+    <table id="books">
+        <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th>ISBN</th>
+        </tr>
   
-    </ul>
+    </table>
 
     <script src="/script.js" type="module"></script>
 </body>
