--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>API Mashup</title>
 </head>
 <body>
-    <table id="books">
-        <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th>ISBN</th>
-        </tr>
-  
-    </table>
-
-    <script src="/script.js" type="module"></script>
+<div id="app">
+    <h1>Weather and Traffic Overview</h1>
+    <div id="weather"></div>
+    <div id="traffic"></div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
